[package]
name = "eng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "0.14.1"
clap = { version = "4.3.0", features = ["derive"] }
md5 = "0.7.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["std"] }
serde_yaml = "0.9.21"
